R401: Doc du proxy
